// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: admin is not using the default password 1`] = `
<ChangeAdminPasswordAppRenderer
  confirmPasswordValue=""
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  onConfirmPasswordChange={[Function]}
  onPasswordChange={[Function]}
  onSubmit={[Function]}
  passwordValue=""
  submitting={false}
  success={true}
/>
`;

exports[`should render correctly: default 1`] = `
<ChangeAdminPasswordAppRenderer
  canAdmin={true}
  confirmPasswordValue=""
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  onConfirmPasswordChange={[Function]}
  onPasswordChange={[Function]}
  onSubmit={[Function]}
  passwordValue=""
  submitting={false}
  success={false}
/>
`;
